tests/phppt/errors/empty_ignore.phppt
--TEST--
Comments, comments everywhere.
--FILE--
<?php

ignore {
    /**/
    #
    //
}

?>
--EXPECTF--

Empty ignore pattern on line 3.
